--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,8 @@
         "jsonwebtoken": "^8.5.1",
         "pg": "^8.6.0",
         "pg-hstore": "^2.3.3",
-        "sequelize": "^6.6.2"
+        "sequelize": "^6.6.2",
+        "slug": "^5.0.1"
     },
     "devDependencies": {},
     "scripts": {
