--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
         "cors": "^2.8.5",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
+        "express-formidable": "^1.2.0",
         "jsonwebtoken": "^8.5.1",
         "pg": "^8.6.0",
         "pg-hstore": "^2.3.3",
