--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "net": "^1.0.2",
     "nuxt": "^2.15.3",
     "request": "^2.79.0",
+    "vue2-editor": "^2.10.2",
     "vuex-persistedstate": "^4.0.0-beta.3"
   },
   "devDependencies": {
